# nextjs-neardev-rust-template

./: .gitignore  .gitpod.Dockerfile  README.md  cypress.config.js  next.config.js  package-lock.json  package.json  serverless.test.yml  tsconfig.json
.github/workflows/: deploy-aws-serverless.yml  tests.yml
contracts/: Cargo.toml
contracts/integration-tests/rs/: Cargo.toml
contracts/integration-tests/rs/src/: tests.rs
contracts/res/: awesome_rust_dapp.wasm  status_message.wasm  steady_study_token.wasm
contracts/src/: main.rs
contracts/steady-study-token/: Cargo.toml
contracts/steady-study-token/src/: lib.rs
cypress/e2e/: index.d.ts  spec.cy.ts
src/: near-env-config.ts  near-init-contract.ts  redux-reducer.ts  redux-store.ts  types.ts
src/components/: Form.tsx
src/features/todos/: todoSlice.ts
src/models/: galary-model.ts
src/pages/: _app.tsx  galary.tsx  index.tsx
src/redux-middlewares/: index.ts
terraform/components/backend/: README.md  apply.sh  iam.tf  main.tf  output.tf  providers.tf  variables.tf
terraform/components/backend/templates/: github-workflow-assume-role-policy.json  github-workflow-iam-policy.json
