[package]
name = "awesome-rust-dapp"
version = "0.1.0"
authors = ["e-fujikawa <efg.river@gmail.com>"]
edition = "2021"

[dev-dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
near-sdk = "4.0.0"
near-contract-standards = "^3.1.1"

steady-study-token = { path = "./steady-study-token" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true


[workspace]
members = [
    "steady-study-token"
]

