[package]
name = "awesome-rust-dapp"
version = "0.1.0"
authors = ["e-fujikawa <efg.river@gmail.com>"]
edition = "2021"

[dev-dependencies]
near-sdk = "4.0.0"
near-contract-standards = "^4.0.0"
anyhow = "1.0"
borsh = "0.9"
maplit = "1.0"
near-units = "0.2.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
workspaces = "0.4.0"
pkg-config = "0.3.1"
syn = "1.0.60"

steady-study-token = { path = "./steady-study-token" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = [
    "steady-study-token",
    "integration-tests/rs"
]

