[package]
name = "steady-study-token"
version = "0.0.1"
authors = ["e-fujikawa <efg.river@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "^4.0.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
schemars = "0.8"
